src/tests/snapshots/gitu__tests__log__grep_no_match.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌No commits found                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fd361eadad4094c9
