src/tests/snapshots/gitu__tests__log__grep_second.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌6c08cf7 add second commit                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c60740e4f1c77f24
