src/tests/snapshots/gitu__tests__log__grep_second_other.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌* 6c08cf7 add second commit                                     Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: e223d27933984bd5
