src/tests/snapshots/gitu__tests__log__log_all_branches.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌* 9295151 side third commit                                     Author Name __ |
 | * 16c9409 main second commit                                  Author Name __ |
 |/                                                                             |
 * 98de714 first commit                                          Author Name __ |
 * b66a0bf origin/main add initial-file                          Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 6e850698f252fe96
