src/tests/snapshots/gitu__tests__log__log_empty_branch.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 278229390e566dff
